--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -7,6 +7,8 @@
     android:orientation="horizontal"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp"
     android:clickable="true"
     >
   <TextView
@@ -14,21 +16,22 @@
       style="@style/StockSymbolTextStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:gravity="left|center_vertical"
+      android:gravity="start|center_vertical"
       tools:text="GOOG"
       />
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:gravity="right"
+      android:gravity="end"
       >
     <TextView
         android:id="@+id/bid_price"
         style="@style/BidPriceTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="10sp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         tools:text="1000.00"
         />
     <TextView
@@ -38,7 +41,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="3dp"
+        android:paddingEnd="3dp"
         android:paddingRight="3dp"
+        android:paddingStart="3dp"
         tools:text="100%"
         />
   </LinearLayout>
