--- a/app/src/main/res/layout/tooltip.xml
+++ b/app/src/main/res/layout/tooltip.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    android:paddingRight="5dp"
+    android:background="@drawable/rect_round_corners_bck">
     <TextView
         android:id="@+id/value"
         android:layout_width="wrap_content"
