--- a/app/src/main/res/layout/widget_collection.xml
+++ b/app/src/main/res/layout/widget_collection.xml
@@ -18,14 +18,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:id="@+id/widget_collection">
 
     <FrameLayout
         android:id="@+id/widget"
         android:layout_width="match_parent"
         android:layout_height="@dimen/abc_action_bar_default_height_material">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stock Hawk Widget"
+            android:layout_gravity="center"
+            style="@style/StockSymbolTextStyle"/>
     </FrameLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
