--- a/app/src/main/res/layout/tooltip.xml
+++ b/app/src/main/res/layout/tooltip.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_horizontal"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:background="@drawable/rect_round_corners_bck">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="#ffffff"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toLeftOf="@+id/value"
+        android:layout_toStartOf="@+id/value"
+        android:text="$"
+        tools:text="$">
+    </TextView>
     <TextView
         android:id="@+id/value"
         android:layout_width="wrap_content"
@@ -16,6 +30,7 @@
         android:textSize="16sp"
         android:textColor="#ffffff"
         android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp">
+        android:layout_marginEnd="5dp"
+        tools:text="100.00">
     </TextView>
 </RelativeLayout>
