--- a/app/src/main/res/layout/tooltip.xml
+++ b/app/src/main/res/layout/tooltip.xml
@@ -6,7 +6,9 @@
     android:gravity="center_horizontal"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:background="@drawable/rect_round_corners_bck">
+    android:background="@drawable/rect_round_corners_bck"
+    android:clickable="true"
+    android:id="@+id/tooltip">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
