--- a/app/src/main/res/xml/widget_info_collection.xml
+++ b/app/src/main/res/xml/widget_info_collection.xml
@@ -25,4 +25,5 @@
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen|keyguard"
+    android:previewImage="@drawable/widget_collections_preview"
     tools:ignore="UnusedAttribute" />
