--- a/app/src/main/res/layout/widget_collection.xml
+++ b/app/src/main/res/layout/widget_collection.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stock Hawk Widget"
+            android:text="@string/app_name"
             android:layout_gravity="center"
             style="@style/StockSymbolTextStyle"/>
     </FrameLayout>
