--- a/app/src/main/res/layout/tooltip.xml
+++ b/app/src/main/res/layout/tooltip.xml
@@ -8,6 +8,7 @@
     android:paddingRight="5dp"
     android:background="@drawable/rect_round_corners_bck"
     android:clickable="true"
+    android:focusable="true"
     android:id="@+id/tooltip">
 
     <TextView
