--- a/app/src/main/res/layout/widget_collection.xml
+++ b/app/src/main/res/layout/widget_collection.xml
@@ -24,13 +24,15 @@
     <FrameLayout
         android:id="@+id/widget"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/abc_action_bar_default_height_material">
+        android:layout_height="@dimen/abc_action_bar_default_height_material"
+        android:focusable="true">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:layout_gravity="center"
-            style="@style/StockSymbolTextStyle"/>
+            style="@style/StockSymbolTextStyle"
+            android:contentDescription="@string/a11y_widget_button"/>
     </FrameLayout>
 
     <FrameLayout
